# turbocellatlas

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  pages.yml
artifacts/real_data_case_study/: artifact_index.csv  benchmark_log.jsonl  benchmark_report.md  benchmark_summary.csv  benchmark_summary.json  candidate_rerank_comparison.csv  input_data_dictionary.csv  pipeline_stages.csv  query_definitions.csv  top_hits.csv
artifacts/scenario_articles/: broad_state_tuning_summary.csv  cohort_triage_disease_composition.csv  cohort_triage_summary.csv  rare_state_summary.csv  scenario_manifest.json  single_cell_query_summary.csv
artifacts/wetlab_examples/: broad_state_readout.csv  cohort_triage_readout.csv  how_to_read_outputs.csv  myofibroblast_top10.csv  wetlab_use_cases.csv
configs/: minimal.json  wetlab_metadata_template.csv
docs/: api.html  api.md  benchmarks.html  benchmarks.md  benchmarks.rst  conf.py  contributing.html  contributing.md  contributing.rst  get-started.html  get-started.md  guides.html  guides.md  index.html  index.md  index.rst  real-data-case-study.html  real-data-case-study.md  reference.html  reference.md  references.html  references.md  references.rst  release-notes.html  release-notes.md  release-notes.rst  styles.css  theory-and-design.html  theory-and-design.md  tutorial-benchmark-review.html  tutorial-benchmark-review.md  tutorial-broad-state.html  tutorial-broad-state.md  tutorial-cohort-triage.html  tutorial-cohort-triage.md  tutorial-rare-state.html  tutorial-rare-state.md  tutorial-single-cell.html  tutorial-single-cell.md  tutorial.html  (+7 more)
docs/_static/: custom.css
docs/api/: index.rst  reference.rst
docs/getting-started/: index.rst  installation.rst
docs/guides/: index.rst  real-data-case-study.rst  theory-and-design.rst  what-can-do.rst  what-it-does.rst  what-you-need.rst
docs/reference/: api.rst  index.rst
docs/tutorials/: benchmark-review.rst  broad-state-tuning.rst  cohort-triage.rst  get-started.rst  index.rst  rare-state-retrieval.rst  single-cell-query.rst  toy-search.rst  wet-lab-guide.rst
notebooks/: benchmark_walkthrough.ipynb  retrieval_demo.ipynb  wet_lab_walkthrough.ipynb
scripts/: run_real_data_case_study.py  run_scenario_analyses.py  run_wetlab_examples.py  setup_demo_assets.py
src/tca/: __init__.py  benchmarks.py  cli.py  config.py  io.py  pipeline.py  planning.py  quantization.py  scimilarity_support.py  types.py
src/turbocellatlas/: __init__.py  cli.py  config.py  search.py
tests/: test_cli.py  test_pipeline.py  test_planning.py  test_quantization.py  test_search.py
