[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turbocellatlas"
version = "0.3.0"
description = "Minimal atlas-scale cell-state retrieval with exact cosine search."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Dai"}]
keywords = ["single-cell", "retrieval", "atlas", "bioinformatics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["numpy>=1.26"]

[project.urls]
Homepage = "https://github.com/dai540/turbocellatlas"
Documentation = "https://dai540.github.io/turbocellatlas/"
Repository = "https://github.com/dai540/turbocellatlas"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "build>=1.2",
]
docs = [
  "Sphinx>=8.2",
]

[project.scripts]
tca = "turbocellatlas.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
